improving the apk download.

--- a/_data/lang/de.yaml
+++ b/_data/lang/de.yaml
@@ -35,5 +35,5 @@ download:
   small: Hols dir im
   title: Amazon Appstore
  dl_apk_text:
-  before: Sie koennen DeltaChat auch als
-  after: (experimentell) herunterladen
+  before: Sie können auch die neueste experimentelle DeltaChat-Version als
+  after: herunterladen.
