--- a/_data/lang/en.yaml
+++ b/_data/lang/en.yaml
@@ -35,5 +35,5 @@ download:
   small: Get it on
   title: Amazon Appstore
  dl_apk_text:
-  before: You can also download as
-  after: (experimental)
+  before: You can also download the latest experimental version as
+  after: .
