reverted to permalink

--- a/_data/lang/es.yaml
+++ b/_data/lang/es.yaml
@@ -36,4 +36,4 @@ download:
   title: Amazon Appstore
  dl_apk_text:
   before: Puedes descargar la versión ultimá y experimental como un 
-  after: .
+  after: 
