--- a/_data/lang/en.yaml
+++ b/_data/lang/en.yaml
@@ -36,4 +36,4 @@ download:
   title: Amazon Appstore
  dl_apk_text:
   before: You can also download the latest experimental version as
-  after: .
+  after: 
