fix image rendering on mobile

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -27,7 +27,7 @@ All locations and messages are usually end-to-end encrypted and location
 data is not shared with third parties -- that is if your phone is generally configured 
 to not share location data with Google or other parties. 
 
-<img src="../assets/blog/xyiv-devs-pretest.gif" width="200" style="float: left; margin-right: 10px" /> 
+<img src="../assets/blog/xyiv-devs-pretest.gif" width="200" style="float: right; margin-right: 10px" /> 
 While Bjoern and Richy were heavily preparing the Android side of location streaming
 in the last weeks, Nico was greatly pushing ahead the Desktop side of things
 which is not released yet but merged already into mainline "master" development. 
