added featured images for existing blogposts with images

--- a/_posts/2017-08-26-delta-chat-0.9.4.md
+++ b/_posts/2017-08-26-delta-chat-0.9.4.md
@@ -1,6 +1,7 @@
 ---
 title: Delta Chat 0.9.4, Group images, Status, Fixes
 author: Björn Petersen
+image: ../assets/blog/20170826-status.png
 ---
 
 Back from the summer break: Delta Chat 0.9.4 with new **Group images**, new **Status** functions, **Locale** updates 
