--- a/_posts/2017-10-08-delta-chat-0.9.5.md
+++ b/_posts/2017-10-08-delta-chat-0.9.5.md
@@ -1,6 +1,7 @@
 ---
 title: Delta Chat 0.9.5 - "Get your data out of there"-Release
 author: Björn Petersen
+image: ../assets/blog/20171008-backup.png
 ---
 
 Here is Delta Chat 0.9.5 with a new **backup functionality.**
