--- a/_posts/2017-11-14-delta-chat-0.9.7-and-ios.md
+++ b/_posts/2017-11-14-delta-chat-0.9.7-and-ios.md
@@ -1,6 +1,7 @@
 ---
 title: Delta Chat 0.9.7 (The archived one), iOS and docs
 author: Björn Petersen
+image: ../assets/blog/20171114-archive-chats.png
 ---
 
 We've just released Delta Chat 0.9.7, with some new major features:
