--- a/_posts/2018-02-20-delta-chat-0.14.0-gossip-and-setup.md
+++ b/_posts/2018-02-20-delta-chat-0.14.0-gossip-and-setup.md
@@ -1,6 +1,7 @@
 ---
 title: Delta Chat 0.14.0 - Gossip-And-Setup-Message Version
 author: Björn Petersen
+image: ../assets/blog/20180220-asm-delta-delta.jpg
 ---
 
 After months of working on different things but the Autocrypt Setup Message, well, finally it is done :)
