--- a/_posts/2018-02-27-delta-chat-0.15.0-voice-messages.md
+++ b/_posts/2018-02-27-delta-chat-0.15.0-voice-messages.md
@@ -1,6 +1,7 @@
 ---
 title: Delta Chat 0.15.0 with Voice Messages, Elevate Festival and more
 author: Björn Petersen
+image: ../assets/blog/20180227-voice-messages.jpg
 ---
 
 
