--- a/_posts/2019-01-27-releases.md
+++ b/_posts/2019-01-27-releases.md
@@ -1,6 +1,7 @@
 ---
 title: DeltaChat multi-platform releases rolling ... 
 author: holger
+image: ../assets/blog/desktop-screenshot.png
 ---
 
 A lot of efforts in the last half year are coming to fruition ... release time!
