--- a/_posts/2019-03-30-uxreport.md
+++ b/_posts/2019-03-30-uxreport.md
@@ -1,6 +1,7 @@
 ---
 title: Key findings of first Delta Chat UX testing in Kyiv
 author: xenia,holger
+image: ../assets/blog/dc-uxreport1.png
 ---
 
 Our [first user-testing report](../assets/blog/Delta-Chat-UX-test-report1.pdf) is out.
