--- a/_posts/2019-06-28-android.md
+++ b/_posts/2019-06-28-android.md
@@ -1,6 +1,7 @@
 ---
 title: New stable Delta Chat Android with improved group-profiles, video recording, notifications, ... 
 author: bjørn, holga
+image: ../assets/blog/20190628-video.png
 ---
 
 A new and much enhanced Android version (0.500.0) is released and available
