--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -1,6 +1,7 @@
 ---
 title: Delta-XI in Kyiv 2018… a lot of beginnings 
 author: holger, moo
+image: ../assets/blog/xi-graffity.jpg
 ---
 
 <img src="../assets/blog/xi-graffity.jpg" width="200" style="float: left; margin: 10px" /> 
