--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -1,6 +1,7 @@
 ---
 title: New desktop release with RPGP, location streaming and improved mac & ubuntu builds
 author: Jikstra, holga
+image: ../assets/blog/20190625-desktop.png
 ---
 
 <img src="../assets/blog/20190625-desktop.png" width="400" style="float: right ; width: 400" /> 
