--- a/_posts/2019-07-19-uxreport.md
+++ b/_posts/2019-07-19-uxreport.md
@@ -1,6 +1,7 @@
 ---
 title: UX and needfinding report Delta Chat
 author: xenia,holger
+image: ../assets/blog/delta-finreport.png
 ---
 
 Our [final user-testing report](../assets/blog/Delta-Chat-UX-final-report-july2019.pdf) is out.
