--- a/_data/lang/pt.yml
+++ b/_data/lang/pt.yml
@@ -1,41 +1,41 @@
 pt:
   
   meta:
-    description: ""
-    keywords: ""
-    rss_news_title: ""
+    description: Delta Chat - Email Based Instant Messenger
+    keywords: "delta chat, email messaging app, download delta chat"
+    rss_news_title: Delta Chat News
 
   menu:
-    home: ""
-    download: ""
-    blog: ""
-    contribute: ""
-    help: ""
-    forum: ""
+    home: Home
+    download: Download
+    blog: Blog
+    contribute: Contribute
+    help: FAQ
+    forum: Forum
 
-  subscribe_to_feed: ""
+  subscribe_to_feed: Subscribe to our feed
 
-  references: ""
-  imprint: ""
-  privacy: ""
-  language: ""
+  references: References
+  imprint: Imprint
+  privacy: Privacy Policy
+  language: Language
 
   download:
-    recommendation: ""
-    other: ""
-    source_code: ""
-    install_via_packagemanager: ""
-    outdated: ""
-    dl_flathub: ""
-    dl_microsoft: ""
-    dl_mac_appstore: ""
-    dl_appstore: ""
-    beta_on: ""
-    dl_fdroid: ""
-    beta_gplay: ""
+    recommendation: Recommended for you
+    other: Other platforms
+    source_code: Source Code
+    install_via_packagemanager: Install via Package Manager
+    outdated: outdated
+    dl_flathub: Download from Flathub
+    dl_microsoft: Download from Microsoft Store
+    dl_mac_appstore: Download on Apple Mac AppStore
+    dl_appstore: Download on Apple AppStore
+    beta_on: Beta on
+    dl_fdroid: Get it on F-Droid
+    beta_gplay: Beta testing on Google Play
     dl_amazon:
-      small: ""
-      title: ""
+      small: Get it on
+      title: Amazon Appstore
     dl_apk_text:
-      before: ""
-      after: ""
+      before: You can also download as
+      after: (experimental)
