add some headlines

--- a/_posts/2020-03-06-delta-1.2.md
+++ b/_posts/2020-03-06-delta-1.2.md
@@ -10,7 +10,9 @@ adding features and getting releases out - and a bit less on blogging and market
 
 Might be, this is not optimal, however, i have the feeling it is better than the other way round :)
 
-Anyway, here we are. This blog post tries to sum up what was going on feature-wise in Delta Chat 1.1 and 1.2:
+Anyway, here we are:
+
+### What is going on feature-wise in Delta Chat 1.1 and 1.2?
 
 <img src="../assets/blog/2020-03-06-pin-parents.png" width="270" style="float:right; margin-left:1em; margin-bottom:1em;" />
 **Never forget what is _really_ important:** Delta Chat now allows to "pin" any chat,
@@ -38,13 +40,17 @@ but if we know about these things, we will now show some hints on the log in scr
 As most things in Delta Chat, also the provider-database and the built-in-help are **integrated in the app**,
 do not load information from external servers and cannot track you or can cause troubles on bad networks.
 
+This is only a rough overview, there is much more,
+see the different [changelogs](https://delta.chat/en/download#changelogs) for details.
+
+### What else?
+
 Lots of **new translations** were started by the community -
 eg. Bokmål, Croatian, Esperanto, Korean, Serbian, Tamil and Telugu were just added to the apps.
 They are all already pretty usable, however, if you want help on translating missing snippets, 
 you are very welcome at <https://www.transifex.com/delta-chat/>
 
-This is only a rough overview, there is much more,
-see the different [changelogs](https://delta.chat/en/download#changelogs) for details.
+### Get the updates!
 
-The new features will be available as updates in the known stores these days
-and are available already today at <https://get.delta.chat>
+The new features will be available as updates in the known stores soon
+or already today at <https://get.delta.chat> - for Android, iOS and also already partly for Desktop.
