--- a/_posts/2020-03-06-delta-1.2.md
+++ b/_posts/2020-03-06-delta-1.2.md
@@ -32,7 +32,7 @@ You can now start typing your first message even if one or both devices is offli
 
 <img src="../assets/blog/2020-03-06-provider-db.png" width="270" style="float:left; clear:both; margin-right:1em;" />
 **Know what to do when logging in to your e-mail provider:** As you probably know, 
-Delta Chat does not has own servers, messages are sent with the provider of your choice.
+Delta Chat does not have own servers, messages are sent with the provider of your choice.
 For whatever reasons, some providers will require you to do some stuff before your can really use them.  
 This is not the fault of Delta Chat - 
 but if we know about these things, we will now show some hints on the log in screen.
