--- a/_posts/2020-03-06-delta-1.2.md
+++ b/_posts/2020-03-06-delta-1.2.md
@@ -28,7 +28,7 @@ no need to type in complicated e-mail addresses or to compare even more complica
 - _Now_ the handshake runs in background and there is no need to wait for it.
 You can now start typing your first message even if one or both devices is offline!
 
-**Built-in help and FAQ** just in case you want some help on some feature, it is now just a fingertip away.
+**Built-in help and FAQ** just in case you need some help, it is now just a fingertip away.
 
 <img src="../assets/blog/2020-03-06-provider-db.png" width="270" style="float:left; clear:both; margin-right:1em;" />
 **Know what to do when logging in to your e-mail provider:** As you probably know, 
