--- a/_posts/2020-03-06-delta-1.2.md
+++ b/_posts/2020-03-06-delta-1.2.md
@@ -37,8 +37,8 @@ For whatever reasons, some providers will require you to do some stuff before yo
 This is not the fault of Delta Chat - 
 but if we know about these things, we will now show some hints on the log in screen.
 
-As most things in Delta Chat, also the provider-database and the built-in-help are **integrated in the app**,
-do not load information from external servers and cannot track you or can cause troubles on bad networks.
+As most things in Delta Chat, also the provider-database and the built-in-help are **integrated in the app**.
+They do not load information from external servers, they do not track you, they can not cause troubles on bad networks.
 
 This is only a rough overview, there is much more,
 see the different [changelogs](https://delta.chat/en/download#changelogs) for details.
