--- a/_posts/2020-03-06-delta-1.2.md
+++ b/_posts/2020-03-06-delta-1.2.md
@@ -22,7 +22,7 @@ In combination with the "archive chats" function, you have some nice tools to ke
 **_Lots_ of traffic-saving improvements,** too many for this blogpost.
 We will get into details in a separate post therefore.
 
-**Instant QR-code contact set up** - Delta Chat uses QR-codes for easy contact setup -
+**Instant QR-code contact setup** - Delta Chat uses QR-codes for easy contact setup -
 no need to type in complicated e-mail addresses or to compare even more complicated fingerprints.
 - _In the past_, this took a moment as both devices had to be online and you had to wait for the handshake to finish.  
 - _Now_ the handshake runs in background and there is no need to wait for it.
@@ -33,12 +33,12 @@ You can now start typing your first message even if one or both devices is offli
 <img src="../assets/blog/2020-03-06-provider-db.png" width="270" style="float:left; clear:both; margin-right:1em;" />
 **Know what to do when logging in to your e-mail provider:** As you probably know, 
 Delta Chat does not have own servers, messages are sent with the provider of your choice.
-For whatever reasons, some providers will require you to do some stuff before your can really use them.  
+For whatever reasons, some providers will require you to do some stuff before you can really use them.
 This is not the fault of Delta Chat - 
-but if we know about these things, we will now show some hints on the log in screen.
+but if we know about these things, we will now show some hints on the login screen.
 
 As most things in Delta Chat, also the provider-database and the built-in-help are **integrated in the app**.
-They do not load information from external servers, they do not track you, they can not cause troubles on bad networks.
+They do not load information from external servers, they do not track you, they cannot cause troubles on bad networks.
 
 This is only a rough overview, there is much more,
 see the different [changelogs](https://delta.chat/en/download#changelogs) for details.
