fix typo, thanks to @paulaluap

--- a/_posts/2020-03-06-delta-1.2.md
+++ b/_posts/2020-03-06-delta-1.2.md
@@ -1,11 +1,11 @@
 ---
 title: "Pin Chats, Provider Database, Offline Help and more"
-author: "bjørn, paula petersen (drawing)"
+author: "bjørn, paula (drawing)"
 image: ../assets/blog/2020-03-06-drawing.png
 ---
 
 <img src="../assets/blog/2020-03-06-drawing.png" width="270" style="float:left; margin-right:1em;" /> 
-In the first months this year, we concentrated very much on fixing bugs,
+In the first months this year we concentrated very much on fixing bugs,
 adding features and getting releases out - and a bit less on blogging and marketing.
 
 Might be, this is not optimal, however, i have the feeling it is better than the other way round :)
