out of beta #319

--- a/_data/lang/en.yaml
+++ b/_data/lang/en.yaml
@@ -33,6 +33,7 @@ en:
     beta_on: Beta on
     dl_fdroid: Get it on F-Droid
     beta_gplay: Beta testing on Google Play
+    gplay: Get it on Google Play
     dl_amazon:
       small: Get it on
       title: Amazon Appstore
