center some blog images

--- a/_posts/2019-06-28-android.md
+++ b/_posts/2019-06-28-android.md
@@ -11,9 +11,11 @@ with updates to 19 other localizations.  There now is a **revamped Chat
 profile view** which combines gallery, document, settings and member list
 in a new tab layout, apart from allowing to see "shared chats" with individual contacts. 
 
+<div class="blog-images">
 <img src="../assets/blog/20190628-gallery.png" width="200" /> 
 <img src="../assets/blog/20190628-documents.png" width="200" /> 
 <img src="../assets/blog/20190628-shared-chats.png" width="200" /> 
+</div>
 
 Other major highlights are:
 
@@ -26,9 +28,11 @@ Other major highlights are:
 See the [Android changelog](https://raw.githubusercontent.com/deltachat/deltachat-android/HEAD/CHANGELOG.md) for a more detailed overview - and also note the list of all the people who have **contributed** to this version,
 **thanks a thousand times!**
 
+<div class="blog-images">
 <img src="../assets/blog/20190628-video.png" width="200" /> 
 <img src="../assets/blog/20190628-media-quality.png" width="200" />
 <img src="../assets/blog/20190628-language.png" width="200" />
+</div>
 
 On the [download page](download) you'll also find the [Delta Chat Desktop releases](https://delta.chat/en/2019-06-25-desktop) from yesterday. Delta Chat is multi-device capable. 
 
