--- a/_data/lang/pl.yml
+++ b/_data/lang/pl.yml
@@ -32,7 +32,7 @@ pl:
     dl_appstore: Pobierz z Apple AppStore
     beta_on: Beta jest na
     dl_fdroid: Pobierz z F-Droid
-    gplay: Get it on Google Play
+    gplay: Pobierz z Google Play
     dl_amazon:
       small: Pobierz z
       title: Amazon Appstore
