--- a/_data/lang/ca.yml
+++ b/_data/lang/ca.yml
@@ -1,41 +1,41 @@
 ca:
   
   meta:
-    description: Delta Chat - Email Based Instant Messenger
-    keywords: "delta chat, email messaging app, download delta chat"
-    rss_news_title: Delta Chat News
+    description: Delta Chat - Missatgeria Instantània basada en correu electrònic
+    keywords: "delta chat, app de missatgeria per correu electrònic, descarrega't delta chat"
+    rss_news_title: Novetats sobre Delta Chat
 
   menu:
-    home: Home
-    download: Download
+    home: Inici
+    download: Descàrregues
     blog: Blog
-    contribute: Contribute
-    help: FAQ
-    forum: Forum
+    contribute: Contribueix
+    help: Preguntes freqüents
+    forum: Fòrum
 
   subscribe_to_feed: Subscribe to our feed
 
-  references: References
-  imprint: Imprint
+  references: Referències
+  imprint: Empremta
   privacy: Privacy Policy
-  language: Language
+  language: Idioma
 
   download:
     recommendation: Recommended for you
-    other: Other platforms
-    source_code: Source Code
+    other: Altres plataformes
+    source_code: Codi font
     install_via_packagemanager: Install via Package Manager
-    outdated: outdated
+    outdated: desactualitzat
     dl_flathub: Download from Flathub
     dl_microsoft: Download from Microsoft Store
     dl_mac_appstore: Download on Apple Mac AppStore
     dl_appstore: Download on Apple AppStore
-    beta_on: Beta on
-    dl_fdroid: Get it on F-Droid
-    gplay: Get it on Google Play
+    beta_on: Beta a
+    dl_fdroid: Aconsegueix-lo a F-Droid
+    gplay: Aconsegueix-lo a Google Play
     dl_amazon:
-      small: Get it on
-      title: Amazon Appstore
+      small: Aconsegueix-lo a
+      title: Appstore d'Amazon
     dl_apk_text:
       before: You can also download as
       after: (experimental)
