--- a/_posts/2020-08-01-ux-final.md
+++ b/_posts/2020-08-01-ux-final.md
@@ -4,12 +4,12 @@ author: xenia, holger
 image: ../assets/blog/2020_final_ux_page1.png
 ---
 
-Our final Delta Chat UX summary report [is out](../assets/blog/2020-07-final-ux.pdf),
-summarizing developments addressing needfinding interviews and real-world UX tests 
-with people engaged in human rights missions in Belarus, 
-Russia, Ukraine, Iran, Taiwan and Hong Kong. Most of this work was supported 
+Our final Delta Chat UX summary report is out, 
+summarizing our developments which address real world needs from
+people engaged in human rights missions in Belarus, 
+Russia, Ukraine, Iran, Taiwan and Hong Kong. This work was thankfully supported 
 by the [OpenTechFund](https://opentech.fund) and would otherwise not have been
-possible. 
+possible.   
 
 <a href="../assets/blog/DC_final_ux_july_2020.pdf">
     <img src="../assets/blog/2020_final_ux_page1.png"
