--- a/_posts/2020-08-01-ux-final.md
+++ b/_posts/2020-08-01-ux-final.md
@@ -1,7 +1,7 @@
 ---
 title: Final report on UX developments 2019/2020
 author: xenia, holger
-image: ../assets/blog/2020_final_ux_page1.png
+image: ../assets/blog/2020_final_ux_page1-preview.jpg
 ---
 
 Our final Delta Chat UX summary report is out, 
