fix typo, thanks mastodon for notifiying

--- a/_data/lang/fr.yml
+++ b/_data/lang/fr.yml
@@ -6,7 +6,7 @@ fr:
     rss_news_title: Actualités Delta Chat
 
   menu:
-    home: Accuel
+    home: Accueil
     download: Téléchargement
     blog: Blog
     contribute: Contribuer
