update translations via './tools/t-dance.sh pull'

--- a/_data/lang/pl.yml
+++ b/_data/lang/pl.yml
@@ -6,7 +6,7 @@ pl:
     rss_news_title: Aktualności Delta Chat
 
   menu:
-    home: Home
+    home: Główna
     download: Pobierz
     blog: Blog
     contribute: Wsparcie
