--- a/_data/lang/uk.yml
+++ b/_data/lang/uk.yml
@@ -1,41 +1,41 @@
 uk:
   
   meta:
-    description: Delta Chat - Email Based Instant Messenger
-    keywords: "delta chat, email messaging app, download delta chat"
-    rss_news_title: Delta Chat News
+    description: Delta Chat - обмін миттєвими повідомленнями через електронну пошту
+    keywords: "delta chat, додаток електронної пошти, скачати delta chat, завантажити delta chat"
+    rss_news_title: Новини Delta Chat
 
   menu:
-    home: Home
-    download: Download
-    blog: Blog
-    contribute: Contribute
+    home: Домівка
+    download: Завантажити
+    blog: Блог
+    contribute: Допомогти
     help: FAQ
-    forum: Forum
+    forum: Форум
 
-  subscribe_to_feed: Subscribe to our feed
+  subscribe_to_feed: Підписатись
 
-  references: References
-  imprint: Imprint
-  privacy: Privacy Policy
-  language: Language
+  references: Посилання
+  imprint: Вихідні дані
+  privacy: Політика конфіденційності
+  language: Мова
 
   download:
-    recommendation: Recommended for you
-    other: Other platforms
-    source_code: Source Code
-    install_via_packagemanager: Install via Package Manager
-    outdated: outdated
-    dl_flathub: Download from Flathub
-    dl_microsoft: Download from Microsoft Store
-    dl_mac_appstore: Download on Apple Mac AppStore
-    dl_appstore: Download on Apple AppStore
-    beta_on: Beta on
-    dl_fdroid: Get it on F-Droid
-    gplay: Get it on Google Play
+    recommendation: Рекомендовано для вас
+    other: Інші платформи
+    source_code: Вихідний код
+    install_via_packagemanager: Інсталювати через пакетний менеджер
+    outdated: застаріло
+    dl_flathub: Завантажити з Flathub
+    dl_microsoft: Завантажити з Microsoft Store
+    dl_mac_appstore: Завантажити з Apple Mac AppStore
+    dl_appstore: Завантажити з Apple AppStore
+    beta_on: Бета
+    dl_fdroid: Отримати з F-Droid
+    gplay: Отримати з Google Play
     dl_amazon:
-      small: Get it on
+      small: Отримати з
       title: Amazon Appstore
     dl_apk_text:
-      before: You can also download as
-      after: (experimental)
+      before: Ви також можете завантажити з
+      after: (експеримент)
