--- a/_posts/2020-09-13-belarus.md
+++ b/_posts/2020-09-13-belarus.md
@@ -35,7 +35,7 @@ In this moment, what we need are more decentralized protocols, like Email, and m
 
 
 "Yes, @delta_chat works in Belarus, e.g. you can use it with Yandex (needs enabled IMAP support)"
-https://nitter.net/delta_chat/status/1293454056661356546
+-> [source: Twitter](https://nitter.net/delta_chat/status/1293454056661356546)
 
 "yes, Delta Chat works in Belarusia even if Signal, Whatsapp etc. suffer blockings."
-https://nitter.net/delta_chat/status/1293456217248079872
+-> [source: Twitter](https://nitter.net/delta_chat/status/1293456217248079872)
