--- a/_posts/2020-09-13-belarus.md
+++ b/_posts/2020-09-13-belarus.md
@@ -28,7 +28,7 @@ Funding from the Open Technology Fund enabled our team at Delta Chat to dive eve
 Delta Chat is open source software maintained by real people all over the world, who are funded through independent sources. It is THIS independence in particular that makes Delta Chat special. There's trust that it'll last beyond a particular political moment or a particular business model or economic cycle. In these scenarios, people are trusting their technology with their lives.
 
 
-In this moment, what we need are more decentralized protocols, like Email, and more independent applications, like delta.chat. We need more open standards built on research, not monopolies that are easily controlled by a single organization or government.
+In this moment, what we need are more decentralized protocols, like email, and more independent applications, like delta.chat. We need more open standards built on research, not monopolies easily controlled by a single organization or government.
 
 
 
