--- a/_posts/2020-09-13-belarus.md
+++ b/_posts/2020-09-13-belarus.md
@@ -23,7 +23,7 @@ Not only is it difficult to block, governments around the world actually don't r
 
 This type of innovation is not going to just happen by itself in the private sector. Email is the shining star example of a decentralized protocol that works even when everything else doesn't, precisely because it is an open, independent, and interoperable standard with no dependency on any one particular government, company, or business model.
 
-Funding from the Open Technology Fund enabled our team at Delta Chat to dive even deeper into Email to produce a chat application that really works in places like Belarus.
+Funding from the Open Technology Fund enabled our team at Delta Chat to dive even deeper into email to produce a chat application that really works in places like Belarus.
 
 Delta Chat is open source software maintained by real people all over the world, who are funded through independent sources. It is THIS independence in particular that makes Delta Chat special. There's trust that it'll last beyond a particular political moment or a particular business model or economic cycle. In these scenarios, people are trusting their technology with their lives.
 
