--- a/_posts/2020-09-13-belarus.md
+++ b/_posts/2020-09-13-belarus.md
@@ -16,7 +16,7 @@ Delta Chat messages sent from Yandex looked like any other ordinary and boring e
 
 As far as we know from other researchers in the area, local email providers didn't forward the mail outside the country, but for a group of testers (~10-15 logs) of our own servers as well as yandex and mail.ru, we were able to send email using STARTTLS.
 
-Not only is it difficult to block, governments around the world actually don't really want to block email. Email is used for everything; from binine birthday cards, to finance, to life-saving information. That means there is collateral damage when the government blocks email. We've found that governments don't really do a great job of blocking decentralized protocols like Email, even for even a short amount of time.
+Not only is it difficult to block, governments around the world actually don't really want to block email, as it is used for everything; from benign birthday cards, to finance, to life-saving information. That means there is collateral damage when the government blocks its use. We've found that governments don't really do a great job of blocking decentralized protocols like email, even for even a short amount of time.
 
 
 ## Independence is crucial
