--- a/_posts/2020-09-13-belarus.md
+++ b/_posts/2020-09-13-belarus.md
@@ -15,9 +15,9 @@ During the internet censorship in Belarus, we performed a variety of tests on De
 
 Delta Chat messages sent from Yandex looked like any other ordinary and boring email. This made Delta.Chat very difficult to block.
 
-As far as we know from other researchers in the area, local email providers didn't forward the mail outside the country, but for a group of testers (~10-15 logs) of our own servers as well as email providers in Russia, we were able to send email.
+As far as we know from other researchers in the area, local email providers didn't forward the mail outside the country, but for a group of testers (~10-15 logs) of our own servers as well as email providers in Russia, the testers were able to send email.
 
-Not only is it difficult to block, governments around the world actually don't really want to block email, as it is used for everything; from benign birthday cards, to finance, to life-saving information. That means there is collateral damage when the government blocks its use. We've found that governments don't really do a great job of blocking decentralized protocols like email, even for even a short amount of time.
+Not only is it difficult to block, governments around the world actually don't really want to block email, as it is used for everything; from benign birthday cards, to finance, to life-saving information. That means there is collateral damage when the government blocks its use. We've found that governments don't really do a great job of blocking decentralized protocols like email, even for a short amount of time.
 
 
 ## Independence is crucial
