--- a/_posts/2020-09-13-belarus.md
+++ b/_posts/2020-09-13-belarus.md
@@ -7,11 +7,13 @@ image: ../assets/blog/2020-09-by.jpg
 It's critical that ordinary people can get information out of their country without the government knowing who they are or what they're talking about. This free communication forms the basis for political freedom. This diversity of opinion and independent media are the bedrock of a free and fair society.
 
 <img src="../assets/blog/2020-09-by.jpg" width="400" style="float:right; clear:both; margin-left:1em; margin-bottom:1em;" alt="" />
-From August 9 to August 12, Internet access in Belarus was severely restricted for a total of 61 hours,
-meaning only text messages and voice calls.
+**From August 9 to August 12, Internet access in Belarus was severely restricted for a total of 61 hours,
+meaning only text messages and voice calls.**
+
 Twitter and WhatsApp? broken. VPNs were blocked.
+
 The government blocked Apple Store and Google Play, so even if you knew an app that worked for you, you still couldn't download it.
-Messengers and services which were not prepared to circumvent censorship, including WhatsApp, Twitter and VPNs were blocked.
+Messengers and services which were not prepared to circumvent censorship were blocked.
 And you couldn't even install working ones such as Psiphon VPN if you were not preparing in advance,
 because Apple Store and Google Play were blocked.
 
