--- a/_posts/2020-09-13-belarus.md
+++ b/_posts/2020-09-13-belarus.md
@@ -6,7 +6,7 @@ image: ../assets/blog/2020-09-by.jpg
 
 It's critical that ordinary people can get information out of their country without the government knowing who they are or what they're talking about. This free communication forms the basis for political freedom. This diversity of opinion and independent media are the bedrock of a free and fair society.
 
-<img src="../assets/blog/2020-09-by.jpg" width="400" style="float:right; clear:both; margin-left:1em; margin-bottom:1em;" alt="" />
+<img src="../assets/blog/2020-09-by.jpg" width="400" style="float:right; clear:both; margin-left:.1em; margin-right:1em; margin-bottom:1em;" alt="" />
 **From August 9 to August 12, Internet access in Belarus was severely restricted for a total of 61 hours,
 meaning only text messages and voice calls.**
 
