--- a/_data/lang/es.yml
+++ b/_data/lang/es.yml
@@ -32,7 +32,7 @@ es:
     dl_appstore: Descargar en Apple AppStore
     beta_on: Beta en
     dl_fdroid: Consíguelo en F-Droid
-    gplay: Get it on Google Play
+    gplay: Consíguelo en Google Play
     dl_amazon:
       small: Consíguelo en
       title: Amazon Appstore
