--- a/_data/lang/fr.yml
+++ b/_data/lang/fr.yml
@@ -32,7 +32,7 @@ fr:
     dl_appstore: Télécharger depuis l'Apple AppStore
     beta_on: Bêta sur
     dl_fdroid: Obtenez-le sur F-Droid
-    gplay: Get it on Google Play
+    gplay: Obtenez-le sur Google Play
     dl_amazon:
       small: Obtenez-le sur
       title: Amazon Appstore
