--- a/_data/lang/uk.yml
+++ b/_data/lang/uk.yml
@@ -16,7 +16,7 @@ uk:
   subscribe_to_feed: Підписатись
 
   references: Посилання
-  imprint: Вихідні дані
+  imprint: Контакти
   privacy: Політика конфіденційності
   language: Мова
 
