correct alt-attribute

--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -88,7 +88,7 @@ also opens several options for the future - stay curious :)
 
 The third big part: We made the **connectivity visible:**
 
-<img src="../assets/blog/2021-08-connectivity.png" style="width:260px; clear:both; margin-bottom:.2em;" alt="Screenshot showing Account Options" />
+<img src="../assets/blog/2021-08-connectivity.png" style="width:260px; clear:both; margin-bottom:.2em;" alt="Screenshot showing 'Not connected' in the title bar" />
 
 The **title bar** now shows if you are not connected for whatever reason,
 may it be lost WIFI or may it be that your provider is down again.
