use rectangular m1 image instead of banner, looks better

--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -1,7 +1,7 @@
 ---
 title: M1, Chat Requests, Multi-Account, Connectivity
 author: bjoern
-image: ../assets/blog/2022-08-m1-small.jpg
+image: ../assets/blog/2021-08-m1.jpg
 ---
 
 Many updates to tell, about M1 and, of course, about new releases.
@@ -9,7 +9,7 @@ Many updates to tell, about M1 and, of course, about new releases.
 
 ## M1
 
-<img src="../assets/blog/2022-08-m1.jpg" style="width:100%;" alt="M1 and Delta Chat logos" />
+<img src="../assets/blog/2021-08-m1.jpg" style="width:300px; float:left; margin-right:1em; margin-bottom:.2em;" alt="M1 and Delta Chat logos" />
 
 _"M1?"_ A computer chip? Metric screw thread? Not even close.
 
