fix typo and reword quota

--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -96,7 +96,7 @@ may it be lost WIFI or may it be that your provider is down again.
 A tap on the title
 opens the **new Connectivity View** 
 that gives you **detailed information** about the reason –
-plus some other useful information, eg. possible by your provider **Quota information**.
+plus some other useful information, eg. **Quota information** if possible by your provider.
 
 The connectivity view will get some more improvements the next time,
 also there - stay tuned :)
