--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -4,7 +4,7 @@ author: bjoern
 image: ../assets/blog/2021-08-m1.jpg
 ---
 
-Many updates to tell, about M1 and, of course, about new releases.
+Many updates to tell about M1 and, of course, about new releases.
 
 
 ## M1
