--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -91,7 +91,7 @@ The third big part: We made the **connectivity visible:**
 <img src="../assets/blog/2021-08-connectivity.png" style="width:260px; clear:both; margin-bottom:.2em;" alt="Screenshot showing 'Not connected' in the title bar" />
 
 The **title bar** now shows if you are not connected for whatever reason,
-may it be lost WIFI or may it be that your provider is down again.
+may it be lost WIFI or because your provider is down.
 
 A tap on the title
 opens the **new Connectivity View** 
