--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -104,7 +104,7 @@ also there - stay tuned :)
 
 ## Get the updates
 
-As always, **check out [get.delta.chat](https://get.delta.chat) for the new versions** -
+**Check out [get.delta.chat](https://get.delta.chat) for the new versions** -
 as always, shipping to all stores will take some time.
 
 And, also as always, the  new versions include even,
