--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -33,7 +33,7 @@ One visible outcome of M1 are new releases, **Delta Chat 1.22**, that will be di
 <img src="../assets/blog/2021-08-chat-request.png" style="width:250px; float:right; clear:both; margin-left:.8em; margin-bottom:.2em;" alt="A screenshot with a Chat Request" />
 
 When a person you have not been in contact with yet, writes to you or adds you to a group,
-you now get a **Chat Request** that appears directly the chat list:
+you now get a **Chat Request** that appears directly in the chat list:
 
 - The Chat Request is marked as such with the tag "Request"
 - All messages appear in the correct chat context,
