--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -107,5 +107,5 @@ also there - stay tuned :)
 **Check out [get.delta.chat](https://get.delta.chat) for the new versions** -
 as always, shipping to all stores will take some time.
 
-And, also as always, the  new versions include even,
+And as usual, the new versions include even
 [much, much more to discover](https://delta.chat/en/download#changelogs).
