resort 1.22 blog post

--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -1,31 +1,11 @@
 ---
-title: M1, Chat Requests, Multi-Account, Connectivity
+title: Chat Requests, Multi-Account, Connectivity
 author: bjoern
 image: ../assets/blog/2021-08-m1.jpg
 ---
 
-Many updates to tell about M1 and, of course, about new releases.
-
-
-## M1
-
-<img src="../assets/blog/2021-08-m1.jpg" style="width:300px; float:left; margin-right:1em; margin-bottom:.2em;" alt="M1 and Delta Chat logos" />
-
-_"M1?"_ A computer chip? Metric screw thread? Not even close.
-
-M1 was a place in Hamburg where some Delta Chat developers
-and friends met for two weeks in August.
-We chilled, discussed and settled things -
-or at least tried that :)
-
-The meeting satisfies a whole blog post on its own.
-However, for now,
-I just want to take the chance to shout a big **"Thank you!"**
-to everyone making that possible.
-And also send some explicit greetings to everyone who could not make it to M1,
-for pandemic or whatever reasons.
-
-One visible outcome of M1 are new releases, **Delta Chat 1.22**, that will be discussed in the rest of this blogpost
+**Delta Chat 1.22** is out!
+This post explains the most important changes and happenings around this release.
 
 
 ## Much better Chat Requests
@@ -102,7 +82,24 @@ The connectivity view will get some more improvements the next time,
 also there - stay tuned :)
 
 
-## Get the updates
+## M1 Gathering
+
+<img src="../assets/blog/2021-08-m1.jpg" style="width:300px; float:right; clear:both; margin-left:.4em; margin-bottom:.2em;" alt="M1 and Delta Chat logos" />
+
+Some Delta Chat developers and friends
+met for two weeks in August at M1, a place in Hamburg.
+We chilled, discussed and settled things -
+among them, this 1.22 release.
+
+The meeting satisfies a whole blog post on its own.
+However, for now,
+I just want to take the chance to shout a big **"Thank you!"**
+to everyone making that possible.
+And also send some explicit greetings to everyone who could not make it to M1,
+for pandemic or whatever reasons.
+
+
+## Get the Updates
 
 **Check out [get.delta.chat](https://get.delta.chat) for the new versions** -
 as always, shipping to all stores will take some time.
