rust without further explanations is probably now really known to readers

--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -51,14 +51,14 @@ account **switching is super-fast.**
 **No more forced waiting** when selecting a different account 
 that has some messages to download just after switching.
 
-We could make that possible by using the **new rust code base**,
+We could make that possible by using the **new core code base**,
 that allows running accounts concurrently.
 That also allows eg. group-joins being processed in the background -
 imagine you give someone a qr-code for a group and switch to another account just in the moment one wants to join.
 With the new code base, this is no longer an issue.
 
 Good news for **Delta Chat Android and Desktop** -
-we switched also there to the **same rust code base**. 
+we switched also there to the **same core code base**.
 
 Having the same code base on all platforms
 also opens several options for the future - stay curious :)
